# autolab

./: .gitignore  CLAUDE.md  PROGRAM.md  README.md  makefile  mypy.ini  pyproject.toml
.githooks/: commit-msg  pre-commit
.github/workflows/: gate.yml
projects/explore-rl/src/explore_rl/algorithms/: grpo.py
projects/explore-rl/src/explore_rl/core/: config.py  types.py
projects/explore-rl/src/explore_rl/models/: huggingface.py
projects/explore-rl/src/explore_rl/rewards/: composite.py  rule_based.py
projects/explore-rl/src/explore_rl/training/: loop.py
projects/explore-rl/tests/: test_gpt.py  test_ppo.py
projects/pretraining-gpt/: EXPERIMENT.md  pyproject.toml
projects/pretraining-gpt/src/pretraining_gpt/: interface.py
projects/pretraining-gpt/src/pretraining_gpt/experiment/model/: attention.py  config.py  gpt.py
projects/pretraining-gpt/src/pretraining_gpt/experiment/optim/: muon.py
projects/pretraining-gpt/src/pretraining_gpt/experiment/training/: schedule.py
projects/pretraining-gpt/src/pretraining_gpt/harness/data/: constants.py  download.py  loader.py  tokenizer.py
projects/pretraining-gpt/src/pretraining_gpt/harness/eval/: metrics.py
projects/simple-rl/src/rl/: value.py
projects/simple-rl/tests/: test_core.py  test_policies.py  test_value.py
src/autoresearch/: cli.py  interface.py  launch.py  loops.py  report.py  runner.py  scaffold.py  util.py
tests/: test_cli.py  test_curriculum.py  test_experiments.py  test_grpo.py  test_interface.py  test_launch.py  test_loops.py  test_report.py  test_reporting.py  test_rollout.py  test_runner.py  test_scaffold.py  test_taskboard.py  test_verifiers.py
