[tool.poetry]
name = "autolab"
version = "0.1.0"
description = "ML research workspace"
authors = []
packages = [{ include = "autoresearch", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
torch = ">=2.0"
numpy = "^2.0"
pyarrow = "^18.0"
requests = "^2.32"
tiktoken = "^0.8"
kernels = { version = ">=0.11.7", optional = true }
rustbpe = { version = ">=0.1.0", optional = true }
autoresearch-supervised = { path = "packages/supervised", develop = true }
autoresearch-agent-rl = { path = "packages/agent_rl", develop = true }

[tool.poetry.extras]
cuda = ["kernels", "rustbpe"]

[tool.poetry.scripts]
autoresearch = "autoresearch.cli:main"
autoresearch-new = "autoresearch.scaffold:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.0"
pyright = "^1.1.408"
ruff = "^0.15.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
